--- a/love nature/style.css
+++ b/love nature/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family-Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
 *{
-    margin : 0; 
-    padding : 0;
+    margin :0; 
+    padding :0;
     box-sizing: border-box;
     font-family: 'Poppins',sans-serif;
 }
@@ -41,7 +41,7 @@ header{
 .navigation a.active
 {
     background: #359381;
-    color: #fff;
+    color: #fffff;
 }
 
 .parallax{
